<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="btn_label">submit</string>
    <string name="input"> Enter the temperature in centi grade</string>
    <string name="text">Temperature Conversion</string>
    <string name="blank" />
    <string name="ccc">℃</string>
    <string name="label_3">+3 points</string>
    <string name="label_2">+2 points</string>
    <string name="label_1">+1 point</string>
    <string name="btn_resetlabel">Reset</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="submit">config</string>
    <string name="btn_sava_label">Save</string>
    <string name="label_open_list">OpenList</string>
    <string name="input_rmb">Input RMB</string>
    <string name="info_label">请输入关键字</string>
    <string name="info_btn">查询</string>
    <string name="nodata">No Data</string>
</resources>
