<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="44dp"
        android:onClick="btnReset"
        android:text="@string/btn_resetlabel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teamName"
            android:layout_width="472dp"
            android:layout_height="104dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="TeamA"
            android:textSize="25sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="0"
            android:textSize="65sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd3"
            android:text="@string/label_3" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd2"
            android:text="@string/label_2" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnAdd1"
            android:text="@string/label_1" />
    </LinearLayout>

</RelativeLayout>